--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,8 @@
-<div class=”container”>
+<div class="container">
 
-  <div class=”template”>
+  <div class="template">
   
-  <h1>Simple CRUD functionality using Angular 7 with Bootstrap</h1>
+  <h1> Securing Angular App using Open Id Connect!!!</h1>
   
   </div>
   
