--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
 
-  <a class="navbar-brand" href="#">Logo</a>
+  <a class="navbar-brand" href="../../assets/logo.png"><img src="../../assets/logo.png" style="height: 39px;width: 39px;"/></a>
   
   <button class="navbar-toggler" type="button" data-toggle="collapse" (click)="isCollapsed = !isCollapsed"
   
@@ -28,19 +28,19 @@
   
   <li class="nav-item">
   
-  <a class="nav-link" routerLink="registration">Registration</a>
+  <a class="nav-link" routerLink="registration">Secure It</a>
   
   </li>
   
   </ul>
-  
+<!--   
   <form class="form-inline my-2 my-lg-0">
   
   <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
   
   <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
   
-  </form>
+  </form> -->
   
   </div>
   
