--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,15 @@
 <div class="container">
-
   <div class="template">
-  
-  <h1> Securing Angular App using Open Id Connect!!!</h1>
-  
+    <h1>Sample CRUD App Using Angular 7!</h1>
+    <h2>Extend this app for any CRUD implementation</h2>
+
+    <strong
+      >Source Code:-
+      <a
+        href="https://github.com/rahulsahay19/sample-angular-crud-app"
+        target="_blank"
+        >Download Code</a
+      ></strong
+    >
   </div>
-  
-  </div>
+</div>
