--- a/src/app/registration/registration.component.html
+++ b/src/app/registration/registration.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="text-right">
         <button type="submit" class="btn btn-primary" (click)="onNew()">
-          New
+          New Employee
         </button>
       </div>
       <br>
