--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,15 +1,29 @@
-<div class="container">
-  <div class="template">
-    <h1>Sample CRUD App Using Angular 7!</h1>
-    <h2>Extend this app for any CRUD implementation</h2>
-
-    <strong
-      >Source Code:-
-      <a
-        href="https://github.com/rahulsahay19/sample-angular-crud-app"
-        target="_blank"
-        >Download Code</a
-      ></strong
-    >
+<div class="view">
+  <div class="container">
+      <header>
+          <h3><span class="glyphicon glyphicon-info-sign"></span> About</h3>
+      </header>
+      <br />
+      <div class="container">
+          <div class="row">
+              <div class="col-md-2">Created by:</div>
+              <div class="col-md-10"><a href="https://twitter.com/rahulsahay19" target="_blank">Rahul Sahay</a></div>
+          </div>
+          <br />
+          <div class="row">
+              <div class="col-md-2">Blog:</div>
+              <div class="col-md-10"><a href="https://myview.rahulnivi.net" target="_blank">http://myview.rahulnivi.net</a></div>
+          </div>
+          <br />
+          <div class="row">
+              <div class="col-md-2">GitHub:</div>
+              <div class="col-md-10"><a href="https://github.com/rahulsahay19/sample-angular-crud-app" target="_blank">https://github.com/rahulsahay19/sample-angular-crud-app</a></div>
+          </div>
+          <br />
+          <div class="row">
+              <div class="col-md-2">Yeoman Generator:</div>
+              <div class="col-md-10"><a href="https://www.npmjs.com/package/generator-sample-crud-angular" target="_blank">https://www.npmjs.com/package/generator-sample-crud-angular</a></div>
+          </div>
+      </div>
   </div>
 </div>
